--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Sample Deployment by Paul</title>
   <style>
     body {
-      color: #ffffff;
+      color: #0188cc;
       background-color: #0188cc;
       font-family: Arial, sans-serif;
       font-size: 14px;
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations</h1>
-    <h2>This application was deployed using AWS CodeDeploy.CICD</h2>
+    <h2>This application was deployed using AWS CodeDeploy.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
