--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Sample Deployment by Paul</title>
   <style>
     body {
-      color: #0188cc;
-      background-color: #0188cc;
+      color: #ffffff;
+      background-color: #c63300;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
